# multae-viae

./: .gitignore  Cargo.toml  README.md  justfile  mcp-servers.yaml  models.yaml
.github/: copilot-instructions.md
.github/instructions/: markdown.instructions.md
.scratch/: kris-constitution.md
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
.specify/workflows/: workflow-registry.json
crates/mv-cli/: Cargo.toml
crates/mv-cli/src/: main.rs
crates/mv-cli/tests/: cli_args.rs  cli_logging.rs  cli_tools.rs  cli_trtllm.rs  cli_workflow.rs
crates/mv-core/: Cargo.toml
crates/mv-core/src/: lib.rs
crates/mv-core/src/mcp/: client.rs  config.rs  mod.rs  registry.rs
crates/mv-core/src/tools/: file_list.rs  file_read.rs  http_get.rs  mod.rs  shell_exec.rs
crates/mv-core/src/trtllm/: health.rs
crates/mv-core/src/workflow/: engine.rs  mod.rs  parser.rs  template.rs  types.rs  validate.rs
docs/: 00-research-overview.md  01-architecture-design.md  02-framework-comparison.md  03-local-inference.md  04-mcp-integration.md  05-telemetry-observability.md  06-dsl-flow-management.md  07-model-routing.md  08-rag-integration.md  09-roadmap.md  10-investigations.md  11-trt-llm-integration.md
specs/001-foundation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-foundation/checklists/: requirements.md
specs/002-multi-model-telemetry/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-multi-model-telemetry/checklists/: requirements.md
specs/002-multi-model-telemetry/contracts/: cli.md
specs/003-tool-calling/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-mcp-integration/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-dsl-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-trtllm-provider/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
workflows/examples/: research.yaml  tool-example.yaml
(+8 files in other folders)
