[package]
name = "mv-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
mv-core = { path = "../mv-core" }
rig-core = "0.35"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
