[package]
name = "mv-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
mv-core = { path = "../mv-core" }
rig-core = { version = "0.35", features = ["rmcp"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
serde_json = "1"
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = "0.31"
tracing-opentelemetry = "0.32"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
