[package]
name = "mv-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
thiserror = "2"
rig-core = { version = "0.35", features = ["derive"] }
reqwest = "0.12"
tokio = { version = "1", features = ["process", "time"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full"] }
